[gd_scene load_steps=2 format=3 uid="uid://b7387774b81df"]

[ext_resource type="Script" uid="uid://im065hm5cgdw" path="res://scenes/input/mouse_input/mouse_input_demo.gd" id="1_demo"]

[node name="MouseInputDemo" type="Node2D"]
script = ExtResource("1_demo")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 300)

[node name="Player" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 400.0
offset_top = 300.0
offset_right = 430.0
offset_bottom = 330.0
color = Color(1, 0.3, 0.7, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="MousePanel" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 160.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MousePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/MousePanel/VBoxContainer"]
layout_mode = 2
text = "üñ±Ô∏è Mouse Input"
horizontal_alignment = 1

[node name="MousePosLabel" type="Label" parent="UI/MousePanel/VBoxContainer"]
layout_mode = 2
text = "Mouse: (0, 0)"

[node name="ButtonStatusLabel" type="Label" parent="UI/MousePanel/VBoxContainer"]
layout_mode = 2
text = "Buttons: None"

[node name="ClickCounterLabel" type="Label" parent="UI/MousePanel/VBoxContainer"]
layout_mode = 2
text = "Clicks: L:0 R:0 M:0"

[node name="ControlPanel" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 180.0
offset_right = -20.0
offset_bottom = 280.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "‚öôÔ∏è Controls"
horizontal_alignment = 1

[node name="SensitivityContainer" type="HBoxContainer" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="SensitivityLabel" type="Label" parent="UI/ControlPanel/VBoxContainer/SensitivityContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sensitivity: 1.0x"

[node name="SensitivitySlider" type="HSlider" parent="UI/ControlPanel/VBoxContainer/SensitivityContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.0

[node name="StatusPanel" type="Panel" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 350.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "üìä Mouse Analysis"
horizontal_alignment = 1

[node name="DragInfoLabel" type="Label" parent="UI/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "Drag: Not dragging"

[node name="InstructionPanel" type="Panel" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -160.0
offset_right = -20.0
offset_bottom = -20.0

[node name="InstructionLabel" type="RichTextLabel" parent="UI/InstructionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[b]Try This:[/b]
‚Ä¢ Move mouse around screen
‚Ä¢ Left/Right/Middle click
‚Ä¢ Click and drag
‚Ä¢ Hover over colored zones
‚Ä¢ Adjust sensitivity

[b]Watch For:[/b]
‚Ä¢ Mouse trail effects
‚Ä¢ Click ripple effects
‚Ä¢ Player following mouse
‚Ä¢ Button press detection"
